aula 4 - upgrades nos arquivos

--- a/about.html
+++ b/about.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Quem somos</title>
   </head>
   <body>
     <h1>Quem Somos</h1>
+    <table style="border: 1px solid cyan;">
+      <!-- linha -->
+      <tr> 
+        <!-- coluna -->
+        <!-- th = headers -->
+        <th>Dia da Semana</th>
+        <th>Horário de Funcionamento</th>
+      </tr>
+      <tr>
+        <!-- td = descrição -->
+        <td>Segunda-Feira</td>
+        <td>9:00 - 18:00</td>
+      </tr>
+    </table>
   </body>
 </html>
