--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body style="font-family: Verdana, Geneva, Tahoma, sans-serif">
     <header style="text-align: center">
-      <img src="./assets/logo_petuxos.png" alt="Logo Petuxos" />
+      <img src="./assets/logo_petuxos.png" alt="Logo Petuxos" style="width: 400px; height: 300px;"/>
       <h1 style="color: brown">Petuxos - seu petshop online</h1>
       <form>
         <label>O que você está buscando?</label>
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <a href="index.html">Início</a>
-          <a href="contacts.html">Quem Somos</a>
+          <a href="about.html">Quem Somos</a>
           <a href="products.html">Produtos</a>
           <a href="contacts.html">Contato</a>
         </ul>
