--- a/products.html
+++ b/products.html
@@ -8,5 +8,9 @@
 
   <body>
     <h1>Produtos</h1>
+    <a href="https://www.petz.com.br/" target="_blank"><img src="https://www.petz.com.br/novaLoja/images/home/golden.png" alt="ração golden"
+      style="width: 150px; height: 150px;">
+    <p>Golden</p>
+  </a>
   </body>
 </html>
