--- a/contacts.html
+++ b/contacts.html
@@ -8,5 +8,18 @@
 
   <body>
     <h1>Contatos</h1>
+
+    <form>
+      <label for="nome">Nome Completo</label>
+      <input type="text" id="nome" name="nome" placeholder="Digite seu nome aqui">
+      <br>
+      <br>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email">
+      <br>
+      <br>
+      <label for="mensagem">Mensagem</label>
+      <input type="textarea" id="mensagem" name="mensagem">
+    </form>
   </body>
 </html>
